Index FIle Updated

--- a/1.htm
+++ b/1.htm
@@ -40,7 +40,7 @@
 <center><font size=6 color="sky" >Tobacco</font></center>
 </tr>
 <Tr>
-<td><center><img src="l2.jpg" height="330"></center></td>
+<td><center><img src="22.jpg" height="330"></center></td>
 <td width=50%>
 <font face="Adobe Kaiti Std" size=4>
 Tobacco is a green, leafy plant that contains a chemical called nicotine.<br>
@@ -63,7 +63,7 @@ When tobacco burns, thousands of chemical substances including 40 known cancer c
 <center><font size=6 color="sky" >Constituents</font></center>
 </tr>
 <Tr>
-<td><img src="pp1.jpg" align="right" height="330"></td>
+<td><img src="leaf.jpg" align="right" height="330"></td>
 <td>
 <font face="Adobe Kaiti Std" size=4>
 Tobacco plant grows like other plants only. But, tobacco contains almost 4000 chemicals, naturaly occuring in it. Among these some 2000+ has been prooved poisonous for us.<p>
